--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity
             android:name=".InchesActivity"
+            android:label="@string/title_activity_inches"
             android:noHistory="true" />
         <activity
             android:name=".AboutActivity"
