--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,9 +42,12 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".TimeActivity"
-            android:noHistory="true"
             android:label="@string/title_activity_time"
-            ></activity>
+            android:noHistory="true" />
+        <activity
+            android:name=".MilesActivity"
+            android:noHistory="true"
+            android:label="@string/title_activity_miles"/>
     </application>
 
 </manifest>
