--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
         config {
+            keyAlias 'twistedalias'
+            keyPassword '123456'
+            storePassword '123456'
+            storeFile file('E:/Keystore/Converter_keystore.jks')
         }
     }
     compileSdkVersion 23
@@ -14,10 +18,25 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    signingConfigs{
+
+        releaseConfig{
+
+            storeFile file('Converter_keystore1.jks');
+            storePassword('ajme11');
+            keyAlias "twistedalias";
+            keyPassword "meni11";
+        }
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            signingConfig signingConfigs.releaseConfig;
         }
     }
     productFlavors {
